# workflow-automation-plugins

./: docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: build.yml  docker-image.yml  docker-publish.yml
