[project]
name = "workflow-autmation-plugins"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "openapi-python-client>=0.25.2",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
workflow-runner-sentence-transformers = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
